<resources>
    <string name="app_name">ViExplorer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mn_hotel">Hotels</string>
    <string name="mn_restaurant">Restaurants</string>
    <string name="mn_shop">Shops</string>
    <string name="mn_park">Parks</string>
    <string name="mn_theater">Theaters</string>
    <string name="mn_museum">Museums</string>
    <string name="mm_overview">Overview</string>
    <string name="mn_overview">Overview</string>
    <string name="mn_home">Introduction</string>

    <string name="id_hcmc">hcmc</string>
    <string name="id_hanoi">hanoi</string>

    <string name="name_hcmc">Ho Chi Minh City</string>
    <string name="name_hanoi">Ha Noi</string>

    <string name="des_hcmc">Ho Chi Minh City description goes here</string>
    <string name="des_hanoi">Ha Noi Capital description goes here</string>

    <string name="long_des_hcmc">Ho Chi Minh City (HCMC) is Vietnam at its most dizzying: a high-octane city of commerce and culture that has driven the whole country forward with its pulsating energy. A chaotic whirl, the city breathes life and vitality into all who settle here – visitors cannot help but be hauled along for the ride.

From the finest of hotels to the cheapest of guesthouses, the classiest of restaurants to the tastiest of street stalls, the choicest of boutiques to the scrum of the markets, HCMC is a city of contrasts. Wander through timeless alleys to incense-infused temples before catching up with the present in designer malls beneath sleek skyscrapers. The ghosts of the past live on in buildings that one generation ago witnessed a city in turmoil, but the real beauty of (erstwhile) Saigon’s urban collage is the the seamless blending of these two worlds into one thrilling, seething mass, while a host of new and exhilarating tours get you way off-the-beaten track.</string>

    <string name="long_des_hanoi">Showcasing sweeping boulevards, tree-fringed lakes and ancient pagodas, Hanoi is Asia’s most atmospheric capital. Just don\'t expect a sleepy ambience. It\'s an energetic city on the move, and Hanoi’s ambitious citizens are determined to make up for lost time.

As motorbikes and pedestrians ebb and flow through the Old Quarter’s centuries-old commercial chaos, hawkers in conical hats still ply their wares while other locals breakfast on noodles or sip drip-coffee. At dawn on the shores of Hoan Kiem Lake, synchronised t’ai chi sessions take place beside goateed grandfathers contemplating their next chess moves. In Lenin Park, choreographed military drills have been replaced by chaotic skateboarders, while Hanoi’s bright young things celebrate in cosmopolitan restaurants and bars.

Real estate development and traffic chaos increasingly threaten to subsume Hanoi’s compelling blend of Parisian grace and Asian pace, but a beguiling coexistence of the medieval and the modern still enthrals.</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mg_wait">Retrieving data...</string>
    <string name="title_activity_detail_place">PlaceDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="tab_map">Map</string>
    <string name="tab_info">Overview</string>
    <string name="tab_details">Details</string>
    <string name="hotel_room">Hotel Rooms</string>
    <string name="etc_currency">Price: </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="show_map">Show on map</string>
    <string name="qr">QR Scan</string>
    <string name="exit">Exit</string>
    <string name="voice">Voice Navigation</string>
    <string name="name_dongnai">Dong Nai</string>
    <string name="des_dongnai">Description for Dong Nai</string>
    <string name="name_haiphong">Hai Phong</string>
    <string name="des_haiphong">Hai Phong</string>
    <string name="name_quangtri">Quang Tri</string>
    <string name="des_quangtri">Quang Tri</string>
    <string name="share">Share</string>
</resources>
